--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "motion": "^12.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-github-corner": "^2.5.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
