--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
   "name": "motioncounter",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "type": "module",
+  "main": "./dist/motioncounter.umd.js",
+  "module": "./dist/motioncounter.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/motioncounter.es.js",
+      "require": "./dist/motioncounter.umd.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "motion": "latest"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
